estos son los archivos mas recientes bola de pendejos

--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -62,7 +62,7 @@ label {
     margin-bottom: 4px;
     margin-top: 12px;
 }
-input[type="email"], input[type="password"] {
+input[type="text"], input[type="password"] {
     padding: 10px 12px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -71,7 +71,8 @@ input[type="email"], input[type="password"] {
     outline: none;
     transition: border 0.2s;
 }
-input[type="email"]:focus, input[type="password"]:focus {
+
+input[type="text"]:focus, input[type="password"]:focus {
     border: 1.5px solid #e53935;
 }
 .login-options {
